{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 699,
  "lineage": "d89bb5d2-399b-221b-8429-f88ce7615639",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:security-group/sg-08c987e25608fb5c7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08c987e25608fb5c7",
            "ingress": [],
            "name": "my-app-instance-sg",
            "name_prefix": "",
            "owner_id": "222639972592",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-app-instance-sg",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-instance-sg",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_sg_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-688294200",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08c987e25608fb5c7",
            "security_group_rule_id": "sgr-01939055b69747018",
            "self": false,
            "source_security_group_id": "sg-0981903bdfc5820ef",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.ec2_sg",
            "module.elb.aws_security_group.elb_sg",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_sg_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3392931008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08c987e25608fb5c7",
            "security_group_rule_id": "sgr-025d24f801f2e4c85",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.ec2_sg",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074dc0a6f6c764218",
            "arn": "arn:aws:ec2:ap-south-1:222639972592:instance/i-0fa0f4201495bca55",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-app-instance-profile",
            "id": "i-0fa0f4201495bca55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-074adeed0f3e72622",
            "private_dns": "ip-10-50-0-244.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.50.0.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea98d394ba43184d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7cf39200036a497",
            "tags": {
              "Name": "my-app-instance-0",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-instance-0",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "my-app-instance-0"
            },
            "vpc_security_group_ids": [
              "sg-08c987e25608fb5c7"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2_instance_profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.aws_security_group.ec2_sg",
            "module.ec2.data.aws_iam_policy_document.ec2_assume_role_policy",
            "module.ec2.module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074dc0a6f6c764218",
            "arn": "arn:aws:ec2:ap-south-1:222639972592:instance/i-083d3df01727b31d0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-app-instance-profile",
            "id": "i-083d3df01727b31d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0a9b9230e8e039f83",
            "private_dns": "ip-10-50-24-178.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.50.24.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c5f36e0ce2aa6fc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049eeee15d4277f7c",
            "tags": {
              "Name": "my-app-instance-1",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-instance-1",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "my-app-instance-1"
            },
            "vpc_security_group_ids": [
              "sg-08c987e25608fb5c7"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2_instance_profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.aws_security_group.ec2_sg",
            "module.ec2.data.aws_iam_policy_document.ec2_assume_role_policy",
            "module.ec2.module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074dc0a6f6c764218",
            "arn": "arn:aws:ec2:ap-south-1:222639972592:instance/i-0d9f2276b0203c16d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-app-instance-profile",
            "id": "i-0d9f2276b0203c16d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-05a029eab21a97b6e",
            "private_dns": "ip-10-50-42-69.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.50.42.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f665e686f2dbb72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ba71e1bbae5f9fd",
            "tags": {
              "Name": "my-app-instance-2",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-instance-2",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "my-app-instance-2"
            },
            "vpc_security_group_ids": [
              "sg-08c987e25608fb5c7"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2_instance_profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.aws_security_group.ec2_sg",
            "module.ec2.data.aws_iam_policy_document.ec2_assume_role_policy",
            "module.ec2.module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:security-group/sg-0981903bdfc5820ef",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0981903bdfc5820ef",
            "ingress": [],
            "name": "my-app-elb-sg",
            "name_prefix": "",
            "owner_id": "222639972592",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-app-elb-sg",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-elb-sg",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2845643462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0981903bdfc5820ef",
            "security_group_rule_id": "sgr-00cdd0b477dca3d79",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_security_group.elb_sg",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1803845398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0981903bdfc5820ef",
            "security_group_rule_id": "sgr-0d947a723f20c71d0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_security_group.elb_sg",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2046939148",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0981903bdfc5820ef",
            "security_group_rule_id": "sgr-0014d3c0348d21226",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_security_group.elb_sg",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb.module.elb.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "my-app-elb-access-log-bucket",
                "enabled": true,
                "interval": 60
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:222639972592:loadbalancer/my-app-elb",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b",
              "ap-south-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-app-elb-471313462.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-app-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-app-elb",
            "security_groups": [
              "sg-0981903bdfc5820ef"
            ],
            "source_security_group": "222639972592/my-app-elb-sg",
            "source_security_group_id": "sg-0981903bdfc5820ef",
            "subnets": [
              "subnet-0aec1397d6098d10c",
              "subnet-0b00858655e79f21a",
              "subnet-0c00cfa15c36ab555"
            ],
            "tags": {
              "Name": "my-app-elb",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-elb",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.elb.aws_s3_bucket.elb_logs",
            "module.elb.aws_security_group.elb_sg",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01942710ae19e0e77",
            "domain": "vpc",
            "id": "eipalloc-01942710ae19e0e77",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-232-3-197.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.3.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-app-vpc-ap-south-1a",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-ap-south-1a",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00efc8d7889a9a7ac",
            "domain": "vpc",
            "id": "eipalloc-00efc8d7889a9a7ac",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-234-41-163.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.41.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-app-vpc-ap-south-1b",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-ap-south-1b",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e9ad6e4ea31ce11",
            "domain": "vpc",
            "id": "eipalloc-01e9ad6e4ea31ce11",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-0-155-108.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.155.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-app-vpc-ap-south-1c",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-ap-south-1c",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:internet-gateway/igw-0970b62ee31f185f7",
            "id": "igw-0970b62ee31f185f7",
            "owner_id": "222639972592",
            "tags": {
              "Name": "my-app-vpc",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01942710ae19e0e77",
            "connectivity_type": "public",
            "id": "nat-01cc2efdac757cf48",
            "network_interface_id": "eni-000802526185d22ab",
            "private_ip": "10.50.61.194",
            "public_ip": "13.232.3.197",
            "subnet_id": "subnet-0b00858655e79f21a",
            "tags": {
              "Name": "my-app-vpc-ap-south-1a",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-ap-south-1a",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00efc8d7889a9a7ac",
            "connectivity_type": "public",
            "id": "nat-0f292a109f0d1852c",
            "network_interface_id": "eni-0b0333f86448e83c8",
            "private_ip": "10.50.64.178",
            "public_ip": "13.234.41.163",
            "subnet_id": "subnet-0c00cfa15c36ab555",
            "tags": {
              "Name": "my-app-vpc-ap-south-1b",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-ap-south-1b",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e9ad6e4ea31ce11",
            "connectivity_type": "public",
            "id": "nat-0c9afee85fd7c431f",
            "network_interface_id": "eni-03fc9fbb3d47b65c2",
            "private_ip": "10.50.84.24",
            "public_ip": "65.0.155.108",
            "subnet_id": "subnet-0aec1397d6098d10c",
            "tags": {
              "Name": "my-app-vpc-ap-south-1c",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-ap-south-1c",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b33c8873aa27da741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01cc2efdac757cf48",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b33c8873aa27da74",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b5ef84b4eb1150cf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f292a109f0d1852c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b5ef84b4eb1150cf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07ad7ab5af02b94351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c9afee85fd7c431f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07ad7ab5af02b9435",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0970b62ee31f185f7",
            "id": "r-rtb-0818d7d6f0b698b6c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0818d7d6f0b698b6c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:route-table/rtb-0b33c8873aa27da74",
            "id": "rtb-0b33c8873aa27da74",
            "owner_id": "222639972592",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-app-vpc-private-ap-south-1a",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-private-ap-south-1a",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:route-table/rtb-0b5ef84b4eb1150cf",
            "id": "rtb-0b5ef84b4eb1150cf",
            "owner_id": "222639972592",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-app-vpc-private-ap-south-1b",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-private-ap-south-1b",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:route-table/rtb-07ad7ab5af02b9435",
            "id": "rtb-07ad7ab5af02b9435",
            "owner_id": "222639972592",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-app-vpc-private-ap-south-1c",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-private-ap-south-1c",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:route-table/rtb-0818d7d6f0b698b6c",
            "id": "rtb-0818d7d6f0b698b6c",
            "owner_id": "222639972592",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-app-vpc-public",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-public",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1f0864c36a2094b",
            "route_table_id": "rtb-0b33c8873aa27da74",
            "subnet_id": "subnet-0f7cf39200036a497"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f84a2aec6d9543d",
            "route_table_id": "rtb-0b5ef84b4eb1150cf",
            "subnet_id": "subnet-049eeee15d4277f7c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027b91457da0bb5b9",
            "route_table_id": "rtb-07ad7ab5af02b9435",
            "subnet_id": "subnet-05ba71e1bbae5f9fd"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0659bf54ea2f6c6bd",
            "route_table_id": "rtb-0818d7d6f0b698b6c",
            "subnet_id": "subnet-0b00858655e79f21a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0205e26f8142d438f",
            "route_table_id": "rtb-0818d7d6f0b698b6c",
            "subnet_id": "subnet-0c00cfa15c36ab555"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c22ca702445142bc",
            "route_table_id": "rtb-0818d7d6f0b698b6c",
            "subnet_id": "subnet-0aec1397d6098d10c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:subnet/subnet-0f7cf39200036a497",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.50.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7cf39200036a497",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222639972592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-app-vpc-private-ap-south-1a",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-private-ap-south-1a",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:subnet/subnet-049eeee15d4277f7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.50.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049eeee15d4277f7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222639972592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-app-vpc-private-ap-south-1b",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-private-ap-south-1b",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:subnet/subnet-05ba71e1bbae5f9fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.50.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ba71e1bbae5f9fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222639972592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-app-vpc-private-ap-south-1c",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-private-ap-south-1c",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:subnet/subnet-0b00858655e79f21a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.50.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b00858655e79f21a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "222639972592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-app-vpc-public-ap-south-1a",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-public-ap-south-1a",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:subnet/subnet-0c00cfa15c36ab555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.50.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c00cfa15c36ab555",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "222639972592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-app-vpc-public-ap-south-1b",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-public-ap-south-1b",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:subnet/subnet-0aec1397d6098d10c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.50.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aec1397d6098d10c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "222639972592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-app-vpc-public-ap-south-1c",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc-public-ap-south-1c",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-084ac2962e78f00e9"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:222639972592:vpc/vpc-084ac2962e78f00e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-063afca09cbe6d413",
            "default_route_table_id": "rtb-00cffb5b07160aece",
            "default_security_group_id": "sg-00d3da2905c2119d4",
            "dhcp_options_id": "dopt-933671fb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084ac2962e78f00e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cffb5b07160aece",
            "owner_id": "222639972592",
            "tags": {
              "Name": "my-app-vpc",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-app-vpc",
              "costcenter": "c001",
              "env": "dev",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}